[gd_scene load_steps=7 format=3 uid="uid://civc8ny0v2omp"]

[ext_resource type="PackedScene" uid="uid://lym42cvdb0b3" path="res://common/interface/generic_popup/generic_popup.tscn" id="1_t2kqp"]
[ext_resource type="Script" path="res://pages/workshop/part_builder_popup/part_builder_popup.gd" id="2_kshy8"]
[ext_resource type="PackedScene" uid="uid://uk8tpg655i5w" path="res://common/interface/craft_part_display/craft_part_display.tscn" id="3_8rtij"]
[ext_resource type="Texture2D" uid="uid://b3bm4djf5tas8" path="res://assets/images/part_example.png" id="4_k6uuo"]
[ext_resource type="PackedScene" uid="uid://yu4ujxccdpgt" path="res://common/interface/gimmick_options/gimmick_options.tscn" id="5_u65p2"]
[ext_resource type="Theme" uid="uid://85byrm5eq3ab" path="res://theme/theme.tres" id="6_mi6o5"]

[node name="PartBuilderPopup" instance=ExtResource("1_t2kqp")]
script = ExtResource("2_kshy8")

[node name="Window" parent="Theme/Scaler" index="0"]
custom_minimum_size = Vector2(400, 0)
offset_top = -40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/Scaler/Window" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="Theme/Scaler/Window/VBoxContainer" index="0"]
layout_mode = 2
text = "Part Builder"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Theme/Scaler/Window/VBoxContainer" index="1"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_type_variation = &"PanelDarken"

[node name="PartDisplay" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/Panel" index="0" instance=ExtResource("3_8rtij")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartOptions" type="OptionButton" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
expand_icon = true
item_count = 1
selected = 0
popup/item_0/text = "Part"
popup/item_0/icon = ExtResource("4_k6uuo")
popup/item_0/id = 0

[node name="GimmickOptions" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer" index="1" instance=ExtResource("5_u65p2")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="ShinyCheckBox" type="CheckBox" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_mi6o5")

[node name="Label" type="Label" parent="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ShinyCheckBox" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
grow_horizontal = 2
grow_vertical = 2
text = "Shiny"
vertical_alignment = 1

[node name="BuildButton" type="Button" parent="Theme/Scaler/Window/VBoxContainer" index="2"]
layout_mode = 2
theme_type_variation = &"PanelButton"
text = "Build"

[connection signal="item_selected" from="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer/PartOptions" to="." method="_on_part_options_item_selected"]
[connection signal="gimmick_selected" from="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer/GimmickOptions" to="." method="_on_gimmick_options_gimmick_selected"]
[connection signal="toggled" from="Theme/Scaler/Window/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ShinyCheckBox" to="." method="_on_shiny_check_box_toggled"]
[connection signal="pressed" from="Theme/Scaler/Window/VBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
